# rater

./: BUILD.bazel  README.md  input.csv  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  new_outfit.cpp  new_outfit.h  new_outfit.ui  new_outfit.ui.autosave  ui_mainwindow.h  ui_new_outfit.h  vladick.pro  vladick.pro.user.7b2aba0
